Update CsvDataTransformationService.java
Update CsvDataTransformationService.java

Refactor CsvDataTransformationService and add zip utility

- Fix typo in `calculatedFilesDir` field and getter.
- Refactor `readCsvHeaderIndex` to use `BufferedReader`.
- Simplify logic and variable names in validation, calculation, and merge methods.
- Update `addYearAndQuarterColumns` to optimize date parsing.
- Add `zipPathKeepingName` method for creating zip archives.
- Remove redundant comments and reorder helper methods.